force-app/main/default/objects/Minutes_of_Meeting__c/Minutes_of_Meeting__c.object-meta.xml
<CustomObject>
    <label>Minutes of Meeting</label>
    <nameField>
        <displayFormat>MOM-{0000}</displayFormat>
        <label>Minutes of Meeting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minutes of Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>