force-app/main/default/objects/Minutes_of_Meeting__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Minutes of Meetings</relationshipLabel>
    <relationshipName>Minutes_of_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>