force-app/main/default/objects/Minutes_of_Meeting__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Minutes of Meetings</relationshipLabel>
    <relationshipName>Minutes_of_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>