force-app/main/default/objects/Minutes_of_Meeting__c/fields/Market_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Market_Intelligence__c</fullName>
    <label>Market Intelligence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>