force-app/main/default/objects/Minutes_of_Meeting__c/fields/MOM_Date__c.field-meta.xml
<CustomField>
    <fullName>MOM_Date__c</fullName>
    <label>MOM Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>