force-app/main/default/objects/Minutes_of_Meeting__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Minutes of Meetings</relationshipLabel>
    <relationshipName>Minutes_of_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>